fix: update box shadow color for vehicle card in dark mode for better visibility

--- a/Vehicle/static/css/vehicle.css
+++ b/Vehicle/static/css/vehicle.css
@@ -41,7 +41,7 @@
   }
   
   .dark-mode .vehicle-card {
-    box-shadow: 0px 2px 12px #ccc;
+    box-shadow: 0px 2px 12px #cccccc90;
   }
 
   .vehicle-card:last-child {
